test : space전체조회 로직변경 (#352)